// https://github.com/grpc-ecosystem/grpc-gateway/blob/master/third_party/googleapis/google/api/http.proto
syntax = "proto3";

package todomvc.v1;
option go_package = "github.com/oinume/todomvc/proto-gen/go/proto/todomvc";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Todos {
    // https://cloud.google.com/apis/design/standard_methods

    rpc CreateTodo(CreateTodoRequest) returns (Todo) {
        option (google.api.http) = {
            post: "/todos"
            body: "*"
        };
    }

    rpc UpdateTodo(UpdateTodoRequest) returns (Todo) {
        option (google.api.http) = {
            patch: "/todos/{id}"
            body: "todo"
        };
    }

    rpc DeleteTodo(DeleteTodoRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/todos/{id}"
            body: "*"
        };
    }
}

message Todo {
    string id = 1;
    string title = 2;
    bool completed = 3;
    google.protobuf.Timestamp completed_at = 4;
}

message CreateTodoRequest {
    string title = 1;
}

message UpdateTodoRequest {
    Todo todo = 1;
    // TODO: FieldMask
}

message DeleteTodoRequest {}
